--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
         -   id: end-of-file-fixer
 
 -   repo: https://github.com/ambv/black
-    rev: 21.4b1
+    rev: 22.3.0
     hooks:
         -   id: black
 
@@ -16,3 +16,11 @@ repos:
     hooks:
     - id: bandit
       exclude: ^\*/tests/
+
+-   repo: https://github.com/PyCQA/prospector
+    rev: 1.7.7
+    hooks:
+        -   id: prospector
+            args:
+                - --summary-only
+                - --zero-exit
