--- a/requirements.txt
+++ b/requirements.txt
@@ -4,25 +4,62 @@
 #
 #    pip-compile
 #
-alembic==1.7.6
+alembic==1.8.1
     # via -r requirements.in
-greenlet==1.1.2
+black==22.10.0
+    # via -r requirements.in
+cfgv==3.3.1
+    # via pre-commit
+click==8.1.3
+    # via black
+distlib==0.3.6
+    # via virtualenv
+filelock==3.8.0
+    # via virtualenv
+greenlet==2.0.0.post0
     # via sqlalchemy
-importlib-metadata==4.11.2
+identify==2.5.8
+    # via pre-commit
+importlib-metadata==5.0.0
     # via alembic
-importlib-resources==5.4.0
+importlib-resources==5.10.0
     # via alembic
-mako==1.1.6
+mako==1.2.3
     # via alembic
-markupsafe==2.1.0
+markupsafe==2.1.1
     # via mako
-psycopg2==2.9.3
+mypy-extensions==0.4.3
+    # via black
+nodeenv==1.7.0
+    # via pre-commit
+pathspec==0.10.1
+    # via black
+platformdirs==2.5.2
+    # via
+    #   black
+    #   virtualenv
+pre-commit==2.20.0
     # via -r requirements.in
-sqlalchemy==1.4.31
+psycopg2==2.9.5
+    # via -r requirements.in
+pyyaml==6.0
+    # via pre-commit
+sqlalchemy==1.4.42
     # via
     #   -r requirements.in
     #   alembic
-zipp==3.7.0
+toml==0.10.2
+    # via pre-commit
+tomli==2.0.1
+    # via black
+typing-extensions==4.4.0
+    # via black
+virtualenv==20.16.6
+    # via pre-commit
+zipp==3.10.0
     # via
     #   importlib-metadata
     #   importlib-resources
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
